monitoring/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: "grafana.raspberrypi"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-grafana
            port:
              number: 80
